# cpp-repo-template

./: .gcc-profile  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
lib/: CMakeLists.txt
lib/bench/: CMakeLists.txt  benches.cpp
lib/include/: Foo.hpp
lib/src/: Foo.cpp
lib/test/: CMakeLists.txt  FooTest.cpp
src/: CMakeLists.txt
src/src/: main.cpp
